# sht43-demoboard-ble-firmware

./: .clang-format  .ecrc  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  documentation_entry.md  ignoreWords.txt  stm32wb5mxx_flash_cm4.ld  version.cmake
.github/: pull_request_template.md
.github/workflows/: check_and_build.yml  create_release.yml
build_scripts/: build_docu.sh  build_source.sh  check.sh
documentation/doxygen/: Doxyfile  application_structure.md  architecture_overview.md  peripherals.md  pin_assignment.md
lib/: .mxproject  CMakeLists.txt  lib.ioc  stm32wb5mxx_flash_cm4.ld
lib/Core/Src/: main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
lib/STM32_WPAN/App/: app_ble.c  custom_app.c  custom_stm.c  custom_stm.h
lib/shared/include/: app_conf.h  stm32wbxx_hal_conf.h  utilities_conf.h
source/: Main.c
source/app/: BleContext.c  BleContext.h  Presentation.c  Presentation.h  SysTest.c  SysTest.h  System.c  System.h
source/app/test/: AdcTest.c  AdcTest.h  CyclicBufferTest.c  CyclicBufferTest.h  FlashTest.c  FlashTest.h  ItemStoreTest.c  ItemStoreTest.h  ListTest.c  ListTest.h  PresentationTest.c  PresentationTest.h  QspiTest.c  QspiTest.h  ScreenTest.c  ScreenTest.h  TraceTest.c  TraceTest.h
source/app_service/item_store/: ItemStore.c  ItemStore.h  MeasurementItemController.c  MeasurementItemController.h  SettingsController.c  SettingsController.h
source/app_service/networking/: HciTransport.c  HciTransport.h
source/app_service/networking/ble/: BleGap.c  BleGap.h  BleGatt.c  BleGatt.h  BleHelper.c  BleHelper.h  BleInterface.c  BleInterface.h  BleOverrides.c  BleTypes.h
source/app_service/networking/ble/gatt_service/: BatteryService.c  BatteryService.h  DataLoggerService.c  DataLoggerService.h  DeviceInfo.c  DeviceInfo.h  DeviceSettingsService.c  DeviceSettingsService.h  HumidityService.c  HumidityService.h  Reboot.c  Reboot.h  ShtService.c  ShtService.h  TemperatureService.c  TemperatureService.h
source/app_service/nvm/: ProductionParameters.c  ProductionParameters.h
source/app_service/power_manager/: BatteryMonitor.c  BatteryMonitor.h  LpmHooks.c  PowerManager.c  PowerManager.h  SchedulerOverride.c
source/app_service/screen/: Screen.c  Screen.h  ScreenDefines.h
source/app_service/sensor/: SensorController.c  SensorController.h  Sht4x.c  Sht4x.h
source/app_service/timer_server/: TimerServer.c  TimerServer.h  TimerServerHelper.c  TimerServerHelper.h  TimerServerRtcInterface.c  TimerServerRtcInterface.h
source/app_service/user_button/: Button.c  Button.h  ButtonEvent.c  ButtonEvent.h
source/hal/: Adc.c  Adc.h  Clock.c  Clock.h  Crc.c  Crc.h  Flash.c  Flash.h  Gpio.c  Gpio.h  I2c3.c  I2c3.h  InterruptHandler.c  InterruptHandler.h  Ipcc.c  Ipcc.h  IrqPrio.h  Overrides.c  Qspi.c  Qspi.h  Rtc.c  Rtc.h  Uart.c  Uart.h
source/utility/: AppDefines.h  ErrorHandler.h  StaticCodeAnalysisHelper.h
source/utility/collection/: CyclicBuffer.c  CyclicBuffer.h  LinkedList.c  LinkedList.h
source/utility/concurrency/: Concurrency.c  Concurrency.h
source/utility/log/: Log.h  Trace.c  Trace.h
source/utility/scheduler/: Message.h  MessageBroker.c  MessageBroker.h  MessageId.h  MessageListener.h  Scheduler.h
st_app/: startup_stm32wb5mxx_cm4.s  sysmem.c  system_stm32wbxx.c
